// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compares two strings 1`] = `
StringComparison {
  "_similarityScore": 0.5263157894736842,
  "_string1": "one two three",
  "_string2": "one two five",
}
`;

exports[`compares two strings 2`] = `
StringComparison {
  "_similarityScore": 1,
  "_string1": "one two three",
  "_string2": "one two three",
}
`;
